--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" style="font-family: Arial,Helvetica Neue,Helvetica,sans-serif;">
 
 <head>
   <meta charset="utf-8">
   <title>Robert Napoles</title>
-</head>
+  <link rel="stylesheet" href="css/styles.css">
+
+
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images\rnapoles.png" alt="Missing Photo"></td>
+      <td><img class="rnapoless"src="images\rnapoles.png" alt="Missing Photo"></td>
       <td>
         <h1>Robert Napoles</h1>
-        <p><em>Anaheim,CA</em>
+        <p>Anaheim,CA</p>
         <p><em></em>IT Professional</p>
-        
-  <h3>About me</h3>
+        <p> <em><a href="https://docs.google.com/document/d/1jHQb_8nCFZno3NGlB7TB7mofF5lQ2x11HG3ygraV-uU/edit?usp=sharing">Resume</a></em></p>
+        <h3>About me</h3>
         <p>I currently work at a K12 District in Orange County, California and serve as the technical point person for all technology related issues at assigned school sites.
           I am beginning my journey in a web development course, and looking forward to learning and enjoying the experience.
         </p>
@@ -69,6 +71,7 @@
   <a href="hobbies.html">My Hobbies</a>
   <br>
   <a href="contact.html">Contact Me</a>
+  <a href="#"></a>
 
 </body>
 
